--- a/Style/HappinessVis.css
+++ b/Style/HappinessVis.css
@@ -35,3 +35,9 @@ body{
     /*width: 80%;*/
 }
 
+/*#scatter-map{*/
+    /*height: 100%;*/
+    /*width: 100%;*/
+    /*background-color: aqua;*/
+/*}*/
+
